hard-gists/a62b5cf5262fc7179dee/run.log
=== Docker Run Log for a62b5cf5262fc7179dee ===
Started at: Mi 29. Okt 19:05:26 CET 2025

[2025-10-29 19:05:27] START: Running container for a62b5cf5262fc7179dee
[2025-10-29 19:05:27] SUCCESS: Container 5844a2ef1c17f606f8a615d26f8c206593c38561fcd94364dd24c143499faf38 started for a62b5cf5262fc7179dee
=== Container logs for a62b5cf5262fc7179dee ===
  File "/snippet.py", line 50
    print link
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for a62b5cf5262fc7179dee ===
[2025-10-29 19:05:29] INFO: Container 5844a2ef1c17f606f8a615d26f8c206593c38561fcd94364dd24c143499faf38 has stopped
